bg image link changed

--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
 .main{
-    background-image: url(https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/chatbg.png);
+    background-image: url(https://ik.imagekit.io/asgxttv7mq/Revamp/chatbg.png?updatedAt=1733841729432);
 }
