--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
 .main{
-    background-image: url(https://ik.imagekit.io/asgxttv7mq/Revamp/chatbg.png);
+    /* background-image: url(https://ik.imagekit.io/asgxttv7mq/Revamp/chatbg.png); */
+    background-color: red;
 }
