bg image uploaded again

--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
 .main{
-    /* background-image: url(https://ik.imagekit.io/asgxttv7mq/Revamp/chatbg.png); */
-    background-color: red;
+    background-image: url(https://ik.imagekit.io/asgxttv7mq/Revamp/chatbg.png);
 }
